feat: basic login and logout